Prototype of Signopsis page, update people

--- a/people.html
+++ b/people.html
@@ -110,7 +110,7 @@
                     </h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
-                      <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (MSc thesis project)<br>
+                      <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (PhD student)<br>
                       Marleen Gaasbeek (MSc thesis project)<br>
                       Natalie Hollain (MSc thesis project)<br>
                       <!-- Britt van Gemert (Researcher)<br> -->
@@ -118,7 +118,7 @@
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD student)<br>
                       <!-- Shani Mende-Gillings (Researcher)<br> -->
-                      Daniël Vink (MSc thesis project)<br>
+                      <br>
                     </p>
 
                     <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
@@ -158,8 +158,10 @@
              <p class="text-black-50 mb-1">
                <b>2022</b>: Britt van Gemert (MSc AI),
                Loes Gennissen (BSc AI),
-               Merel Atia (BSc AI)
-               Roel de jeu (BSc CS)<br>
+               Merel Atia (BSc AI),
+               Roel de jeu (BSc CS),
+               Daniël Vink (MSc CS),
+               Lyke Esselink (MSc AI)<br>
              </p>
              <p class="text-black-50 mb-1">
                <b>2021</b>: Mark van Hofwegen (BSc AI),
