Updates prototype Signopsis page, removed remaining copyright statements

--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -374,7 +374,7 @@
 <!-- Footer-->
 <footer class="footer bg-white small text-center text-black-50">
   <div style="line-height:150%;">
-    <br>&copy;2020 SignLab Amsterdam
+    <!-- <br>&copy;2020 SignLab Amsterdam -->
     <br>
     <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
   </div>
