--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -248,7 +248,7 @@
     <div class="project-text pb-1 w-100 my-auto no-top-padding text-center text-black-50" style="font-size: medium;">
       Powered by the <b><a href="https://vh.cmp.uea.ac.uk/index.php/JASigning" target="_blank">JASigning avatar engine</a></b>
     </div>
-    <br>&copy;2020 SignLab Amsterdam
+    <!-- <br>&copy;2020 SignLab Amsterdam -->
     <br>
     <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
   </div>
