--- a/signopsis.html
+++ b/signopsis.html
@@ -64,9 +64,9 @@
     <div class="container-fluid">
 
 
-      <!-- Challenge Row First two Signopsis-->
+      <!-- Challenge Row First two Signopsis videos-->
       <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-          <!-- Column for text -->
+          <!-- Column for healthcare -->
           <div class="col-12 col-md order-2 ml-md-5">
             <div class="project-text pb-1 w-100 text-left textDIV">
                 <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
@@ -78,42 +78,69 @@
           </div>
 
 
-        <!-- Column for picture -->
+        <!-- Column for conguence of verbs -->
         <div class="col-12 col-md order-1 order-md-12 avatarGIF ml-md-5">
           <div class="project-text pb-1 w-100 text-left textDIV">
             <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
-        <h5>Exploring automatic text-to-sign translation in a healthcare setting</h5>
+        <h5>Congruence of verbs in Sign Language of the Netherlands</h5>
         </div>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe src="https://www.youtube.com/embed/fJ_1nuBdkNQ?rel=0&amp;showinfo=0&amp;loop=1" title="Exploring automatic text-to-sign translation in a healthcare setting" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/ywHkFhNgyjU?rel=0&amp;showinfo=0&amp;loop=1" title="Congruence of verbs in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
 
 
-      <!-- Challenge Row AT5-->
+      <!-- Challenge Row second pair of Signopsis videos-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-          <!-- Column for text -->
+          <!-- Column for Aspect in NGT -->
           <div class="col-12 col-md order-2 ml-md-5">
             <div class="project-text pb-1 w-100 text-left textDIV">
                 <hr class="d-none d-lg-block mb-5 ml-0" />
-            <h5>Exploring automatic text-to-sign translation in a healthcare setting</h5>
+            <h5>Results Aspect in Sign Language of the Netherlands</h5>
             </div>
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://www.youtube.com/embed/fJ_1nuBdkNQ?rel=0&amp;showinfo=0&amp;loop=1" title="Exploring automatic text-to-sign translation in a healthcare setting" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/_ddrURCuyvc?rel=0&amp;showinfo=0&amp;loop=1" title="Aspect in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
 
 
-      <!-- Column for picture -->
+      <!-- Column for Plural in NGT -->
       <div class="col-12 col-md order-1 order-md-12 avatarGIF ml-md-5">
         <div class="project-text pb-1 w-100 text-left textDIV">
           <hr class="d-none d-lg-block mb-5 ml-0" />
-      <h5>Exploring automatic text-to-sign translation in a healthcare setting</h5>
+      <h5>Results Plural in Sign Language of the Netherlands</h5>
       </div>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe src="https://www.youtube.com/embed/fJ_1nuBdkNQ?rel=0&amp;showinfo=0&amp;loop=1" title="Exploring automatic text-to-sign translation in a healthcare setting" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/VwH_owVOa8k?rel=0&amp;showinfo=0&amp;loop=1" title="Plural in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+      </div>
+    </div>
+
+
+    <!-- Challenge Row third pair of Signopsis videos-->
+    <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+      <!-- Column for TISLR report -->
+      <div class="col-12 col-md order-2 ml-md-5">
+        <div class="project-text pb-1 w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-5 ml-0" />
+        <h5>Theoretical Issues in Sign Language Research (TISLR) Conference</h5>
+        </div>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/eOJ8UGqblHM?rel=0&amp;showinfo=0&amp;loop=1" title="Theoretical Issues in Sign Language Research (TISLR) Conference" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+
+
+      <!-- Column for ... -->
+      <div class="col-12 col-md order-1 order-md-12 avatarGIF ml-md-5">
+        <div class="project-text pb-1 w-100 text-left textDIV">
+          <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
+      <!-- <h5>Video title...</h5> -->
+      </div>
+        <!-- <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/VwH_owVOa8k?rel=0&amp;showinfo=0&amp;loop=1" title="Exploring automatic text-to-sign translation in a healthcare setting" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div> -->
       </div>
     </div>
 
@@ -126,7 +153,7 @@
 <!-- Footer-->
 <footer class="footer bg-white small text-center text-black-50">
   <div style="line-height:150%;">
-    <br>&copy;2020 SignLab Amsterdam
+    <!-- <br>&copy;2020 SignLab Amsterdam -->
     <br>
     <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
   </div>
