--- a/people.html
+++ b/people.html
@@ -79,12 +79,12 @@
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
 
 
-                    <h5>Principal investigators</h5>
+                    <h5>Directors</h5>
 
                     <p class="text-black-50 mb-3">
                       <a href="https://www.florisroelofsen.com/" target="_blank">
                         Floris Roelofsen</a>
-                      (Associate Professor Linguistics, Logic and AI)<br>
+                      (Professor Linguistics and AI)<br>
                       <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
                         Roland Pfau</a>
                       (Associate Professor Linguistics)<br>
@@ -103,20 +103,21 @@
                       <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Linguistics)<br>
                       <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
-                      <a href="https://www.upf.edu/en/web/lsc-lab/entry/-/-/140362/adscripcion/raquel-veiga" target="_blank">Raquel Veiga Busto</a> (Postdoc Linguistics)<br>
+                      <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Postdoc Linguistics)<br>
+                      <a href="https://www.illc.uva.nl/People/person/5429/Dr-K-E-Mudd" target="_blank">Katie Mudd</a> (Postdoc Linguistics)<br>
                     </p>
                     <h5>
-                      PhD students and junior researchers
+                      Junior researchers
                     </h5>
                     <p class="text-black-50 mb-3">
-                      <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
-                      <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (PhD student)<br>
-                      Marleen Gaasbeek (MSc thesis project)<br>
-                      Natalie Hollain (MSc thesis project)<br>
+                      <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (PhD AI and Linguistics)<br>
+                      <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD Linguistics)<br>
+                      <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD Linguistics)<br>
+                      Marleen Gaasbeek (MSc Logic)<br>
+                      Natalie Hollain (MSc Data Science)<br>
                       <!-- Britt van Gemert (Researcher)<br> -->
-                      <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
-                      <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
-                      <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD student)<br>
                       <!-- Shani Mende-Gillings (Researcher)<br> -->
                       <br>
                     </p>
@@ -156,6 +157,10 @@
                Master and bachelor alumni
              </h5>
              <p class="text-black-50 mb-1">
+              <b>2023</b>: Jan Pieter Kroeb (BSc CS),
+              Sep Huls (BSc CS)<br>
+            </p>
+            <p class="text-black-50 mb-1">
                <b>2022</b>: Britt van Gemert (MSc AI),
                Loes Gennissen (BSc AI),
                Merel Atia (BSc AI),
