Removed announcement SignLab Open Day

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <div class="container-fluid">
 
           <!-- Challenge Row first section-->
-          <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <!-- <div class="row align-items-start no-gutters mb-4 mb-lg-5"> -->
             <!-- Column for info -->
-            <div class="col-12 col-md order-2">
+            <!-- <div class="col-12 col-md order-2"> -->
 
-              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+              <!-- <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV"> -->
                   <!-- <p class="mb-9">
                     <a href="https://www.signlab-amsterdam.nl/onderzoek" target="_blank">
                       <button type="button" class="btn btn-warning">
@@ -82,7 +82,7 @@
                     </a>
                     </p> -->
 
-                    <h5>Announcement: SignLab Open House on April 3rd - Investigating NGT: What, how en why?</h5>
+                    <!-- <h5>Announcement: SignLab Open House on April 3rd - Investigating NGT: What, how en why?</h5>
                     <p class="mb-6 mt-6">
                       <i>[Dutch text below, NGT in video]</i><br><br>
                       How does a researcher investigate Sign Language of the Netherlands (NGT)? And why is it important to do this? If you want to know the answers to these questions, come visit SignLab’s open house on <b>Monday, April 3rd, 2023</b>! Both deaf and hearing researchers from SignLab Amsterdam, Hogeschool Utrecht and the Dutch Sign Centre (Nederlands Gebarencentrum) will present about what they have been working on and what they have found. All presentations are about research on NGT. Topics that will be covered include plurals in NGT, different ways to ask a question in NGT, the development of sign language avatars, and different sentence types in NGT.<br><br>
@@ -115,11 +115,11 @@
 
                     <hr class="d-none d-lg-block mb-5 ml-0" />
             </div>
-          </div>
+          </div> -->
 
           <!-- Column for picture -->
 
-          <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+          <!-- <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://www.youtube.com/embed/n5hkYh9ItOw?rel=0&amp;showinfo=0&amp;loop=1" title="SignLab Open House announcement video in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div> <br><br><br>
@@ -134,7 +134,7 @@
               </a>
               </p>
           </div>
-        </div>
+        </div> -->
 
         <!-- Challenge Row second section-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
