update css for healthcare demo

--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -36,7 +36,7 @@
 <!-- CSS for question circle -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- CSS file for bootstrap grayscale theme -->
-<link rel="stylesheet" href="css/grayscalestyles.css">
+<link rel="stylesheet" href="ns-demo/css/grayscalestyles.css">
 <!-- CSS file for flag icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.css">
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
