Update healthcare demo

--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -172,7 +172,7 @@
                     <br>
                     <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value, "alertMainTran");'/>
                     <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
-                    <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
+                    <input type="button" id="replayButton" class="btn btn-primary" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
                     <br>
                     <br>
                     <br>
