SignLab Open House video

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <section class="projects-section bg-light fadeIn" id="About">
     <div class="container-fluid">
 
-          <!-- Challenge Row first section-->
+          <!-- Challenge Row first section -->
           <!-- <div class="row align-items-start no-gutters mb-4 mb-lg-5"> -->
             <!-- Column for info -->
             <!-- <div class="col-12 col-md order-2"> -->
@@ -135,6 +135,45 @@
               </p>
           </div>
         </div> -->
+
+
+        <!-- Challenge Row first section -->
+          <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+            <!-- Column for info -->
+            <div class="col-12 col-md order-2">
+
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                <h5>SignLab Open House April 3rd - Investigating NGT: What, how en why?</h5>
+                <p class="mb-6 mt-6">
+                  On April 3rd, we held the first SignLab Open House. This evening was in collaboration with the Dutch Sign Centre (Nederlands Gebarencentrum) and the University of Applied Sciences Utrecht (Hogeschool Utrecht). 
+                  <br><br>
+                  The aftermovie on the right reports on the SignLab Open House. The aftermovie is in NGT, spoken Dutch, and Dutch subtitles.
+                </p>
+
+              
+                  <br><br>
+
+                  <i>
+                    <h5>SignLab Open Avond 3 april - Onderzoek naar NGT: Wat, hoe en waarom?</h5>
+                  
+                    <p class="mb-6 mt-6">
+                      Afgelopen 3 april was de eerste Open Avond van SignLab in samenwerking met Nederlands Gebarencentrum en de Hogeschool Utrecht. 
+                      <br><br>
+                      In de aftermovie rechts doen we verslag!
+                    </p>  
+                  </i>                      
+                <hr class="d-none d-lg-block mb-5 ml-0" />
+            </div>
+          </div> 
+
+          <!-- Column for picture -->
+
+          <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe src="https://www.youtube.com/embed/7XDihmJPzoo?rel=0&amp;showinfo=0&amp;loop=1" title="SignLab Open House video with Dutch subtitles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div> 
+          </div>
+        </div>
 
         <!-- Challenge Row second section-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
