--- a/people.html
+++ b/people.html
@@ -90,7 +90,7 @@
                       (Associate Professor Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/o/o/m.oomen2/m.oomen2.html" target="_blank">
                         Marloes Oomen</a>
-                      (VENI Postdoc Linguistics)<br>
+                      (Assistant Professor Linguistics)<br>
                     </p>
                     <h5>
                       Senior staff
@@ -105,6 +105,7 @@
                       <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
                       <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Postdoc Linguistics)<br>
                       <a href="https://www.illc.uva.nl/People/person/5429/Dr-K-E-Mudd" target="_blank">Katie Mudd</a> (Postdoc Linguistics)<br>
+                      <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Postdoc Linguistics)<br>
                     </p>
                     <h5>
                       Junior researchers
@@ -115,10 +116,9 @@
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD Linguistics)<br>
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD Linguistics)<br>
-                      Marleen Gaasbeek (MSc Logic)<br>
-                      Natalie Hollain (MSc Data Science)<br>
-                      <!-- Britt van Gemert (Researcher)<br> -->
-                      <!-- Shani Mende-Gillings (Researcher)<br> -->
+                      <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (PhD Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Research Assistant)<br>
+                      Jari Andersen (MSc Software Engineering)<br>
                       <br>
                     </p>
 
@@ -158,7 +158,9 @@
              </h5>
              <p class="text-black-50 mb-1">
               <b>2023</b>: Jan Pieter Kroeb (BSc CS),
-              Sep Huls (BSc CS)<br>
+              Sep Huls (BSc CS), 
+              Marleen Gaasbeek (MSc Logic),
+              Natalie Hollain (MSc Data Science)<br>
             </p>
             <p class="text-black-50 mb-1">
                <b>2022</b>: Britt van Gemert (MSc AI),
