--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <!-- Column for picture -->
 
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
-            <div class="embed-responsive embed-responsive-16by9">
+            <div class="embed-responsive embed-responsive-16by9 mb-5">
               <iframe src="https://www.youtube.com/embed/7XDihmJPzoo?rel=0&amp;showinfo=0&amp;loop=1" title="SignLab Open House video with Dutch subtitles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div> 
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
@@ -192,7 +192,6 @@
               <p class="mb-6 mt-6">
                 In April 2023, we held the first SignLab Open House, in collaboration with the Dutch Sign Language Centre (Nederlands Gebarencentrum)
                 and the University of Applied Sciences Utrecht (Hogeschool Utrecht). 
-                <br><br>
                 We made a short aftermovie in NGT, with Dutch voiceover and subtitles. Enjoy watching!
               </p>                 
               <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
