--- a/index.html
+++ b/index.html
@@ -156,12 +156,13 @@
     
                   <h5>Sign language linguistics</h5>
                   <p class="mb-4">
-                    Investigating sign languages has the potential to yield important linguistic insights which are more difficult to obtain by investigating spoken languages alone, because linguistic structures are sometimes easier to detect in sign languages than in spoken languages. Quite literally, sign languages often make linguistic structures <b><a href="https://doi.org/10.1515/tl-2018-0012" target="_blank">directly visible</a></b>.
-                  </p>
-                  <p class="mb-4">
-                    We investigate the structure of signs and signed sentences, paying special attention to cross-modal and intra-modal variation and similarities.
-                    <!-- That is, sign language structures are not only compared to structures identified for spoken languages, but sign languages are also compared to each other, in an effort to determine in how far the modality of signal transmission impacts grammatical structures.-->
-                    In doing so, we do not only make use of traditional methods to collect and analyze sign language data,
+                    Investigating sign languages has the potential to yield important linguistic insights which
+                    are more difficult to obtain by investigating spoken languages alone, because linguistic 
+                    structures are sometimes easier to detect in sign languages than in spoken languages. 
+                    Quite literally, sign languages often make linguistic structures
+                    more directly visible.
+                    To investigate the structure of signs and signed sentences, we do not only make use of
+                    traditional methods to collect and analyze sign language data,
                     but also develop new methods making use of computer vision and machine learning techniques.
                     See the <b><a href="grammar.html" target="_blank">Theoretical Contributions</a></b>
                     page for more information.
