Update people and publications

--- a/people.html
+++ b/people.html
@@ -163,7 +163,10 @@
               Marleen Gaasbeek (MSc Logic),
               Natalie Hollain (MSc Data Science),
               Lisa Lepp (MA Linguistics),
-              Jos Ritmeester (MA Linguistics)<br>
+              Jos Ritmeester (MA Linguistics),
+              Anna-Lina Mörking (BA Linguistics),
+              Vivianne Joosten (MA Linguistics),
+              Sybil Vachaudez (MA Linguistics)<br>
             </p>
             <p class="text-black-50 mb-1">
                <b>2022</b>: Britt van Gemert (MSc AI),
