--- a/media.html
+++ b/media.html
@@ -66,6 +66,37 @@
 
       <!-- Challenge Row W&G-->
       <div class="row align-items-start no-gutters mb-4 ">
+        <!-- Column for text -->
+        <div class="col-12 col-md order-2">
+
+        <div class="project-text pb-1 w-100 text-left textDIV">
+            <h5>An evening of research on Sign Language of the Netherlands</h5>
+            <p class="mb-4">
+              <b>Publisher:</b> <a href="https://woordengebaar.nl/weng/" target="_blank">Woord en Gebaar</a><br>
+              <b>Medium:</b> Article<br>
+              <b>Language:</b> Dutch <br>
+              <b>Date:</b> September 2023 <br>
+              <b>Link:</b> Download article <a href="https://www.signlab-amsterdam.nl/publications/WG-Onderzoek-gebarentaal.pdf" target="_blank">here</a><br>
+        </div>
+      </div>
+
+      <!-- Column for picture -->
+      <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
+        <a href="https://www.signlab-amsterdam.nl/publications/WG-interview-2022.pdf" target="_blank"><img src="images/wg_open_avond.png" class="img-fluid" alt="A picture of the open house evening."></a>
+      </div>
+
+    </div>
+
+    <!-- Challenge row block-->
+    <div class="row align-items-start no-gutters  mb-lg-5">
+      <div class="project-text  w-100 text-left textDIV">
+        <hr class="d-none d-lg-block mb-0 ml-0" />
+      </div>
+    </div>
+    
+    
+    <!-- Challenge Row W&G-->
+      <div class="row align-items-start no-gutters mb-4 ">
           <!-- Column for text -->
           <div class="col-12 col-md order-2">
 
