--- a/people.html
+++ b/people.html
@@ -115,6 +115,7 @@
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (PhD AI and Linguistics)<br>
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD Linguistics)<br>
+                      Lisa Loy (rMA Linguistics)<br>
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD Linguistics)<br>
                       <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (PhD Linguistics)<br>
