--- a/people.html
+++ b/people.html
@@ -101,7 +101,7 @@
                       <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Postdoc Linguistics)<br>
                       <a href="https://www.illc.uva.nl/People/person/5429/Dr-K-E-Mudd" target="_blank">Katie Mudd</a> (Postdoc Linguistics)<br>
                       <a href="https://enalisnick.github.io" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning)<br>
-                      <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
+                      <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT)<br>
                       <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Linguistics)<br>
                       <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
@@ -119,7 +119,7 @@
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD Linguistics)<br>
                       <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (PhD Linguistics)<br>
-                      <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Research Assistant)<br>
+                      <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Researcher)<br>
                       Elynn Weijland (MSc Logic)<br>
                       <br>
                     </p>
