--- a/people.html
+++ b/people.html
@@ -104,6 +104,7 @@
                       <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT)<br>
                       <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">James Trujillo</a> (Assistant Professor Language Sciences for Social Good)<br>
                       <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
                       <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Postdoc Linguistics)<br>
                     </p>
