Added the new sign bank people and deleted Vanja

--- a/people.html
+++ b/people.html
@@ -117,12 +117,18 @@
                       <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (PhD AI and Linguistics)<br>
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD Linguistics)<br>
                       Lisa Loy (rMA Linguistics)<br>
-                      <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD Linguistics)<br>
                       Oline Ranum (MSc AI)<br>
                       <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (PhD Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Researcher)<br>
                       Elynn Weijland (MSc Logic)<br>
+                      Ray Pelupessy (BA Linguistics, Lab Manager) <br>
+                      Galya Stern (BA Linguistics, Lab Manager) <br>
+                      Dalene Venter (Researcher) <br>
+                      Casper Wubbolts (Researcher) <br>
+                      Ellen Nauta (Researcher) <br>
+                      Gomèr Otterspeer (Researcher) <br>
+                      Lisa Gierman (Researcher) <br>
                       <br>
                     </p>
 
