added Google award grant

--- a/projects.html
+++ b/projects.html
@@ -66,10 +66,46 @@
       <!-- Challenge Row First two projects-->
       <div class="row align-items-start mb-4 mb-md">
 
+        <!-- Column for project 1 -->
+        <div class="col-12 col-md order-1">
+          <div class="project-text pb-1 w-100 text-left textDIV">
+          <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
+              <h5>Adaptive, Efficient Collection of Sign Language Data </h5>
+              <p class="mb-4">
+                <b>Grant type:</b> <a href="https://research.google/outreach/air-program/" target="_blank">Google Award for Inclusion Research </a><br>
+                <b>PI:</b> Eric Nalisnick, Floris Roelofsen <br>
+                <b>Year:</b> 2023 <br>
+              <b>Summary:</b>
+              This project will be a collaboration between John Hopkins University and the University of Amsterdam.
+              </p>
+          </div>
+        </div>
+
+      <!-- Column for project 2 -->
+      <div class="col-12 col-md order-2">
+        <div class="project-text pb-1 w-100 text-left textDIV">
+        <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
+            <!-- <h5>A canvas in space: Partitioning of the signing space for referential purposes in Sign Language of the Netherlands (NGT)</h5>
+            <p class="mb-4">
+              <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/another-78-researchers-receive-nwo-veni-grant" target="_blank">NWO VENI grant</a><br>
+              <b>PI:</b> Marloes Oomen <br>
+              <b>Year:</b> 2022-2026 <br>
+            <b>Summary:</b>
+            In sign language conversations, people, animals, and things can be associated with locations in space. This makes the relation between different expressions referring to the same entity directly visible: they are articulated at or point toward the same location in space. Traditionally, it was assumed that such locations could be randomly set up anywhere in the signing space, but more recent work appears to suggest otherwise. In this project, I identify the unwritten rules that signers of Sign Language of the Netherlands apply when picking out spatial locations to represent referents. These new insights will be captured in a three-dimensional model which maps all major spatial partitionings to referent functions.
+            </p> -->
+        </div>
+      </div>
+      
+    </div>
+
+      <!-- Challenge Row First two projects-->
+      <div class="row align-items-start mb-4 mb-md">
+
           <!-- Column for project 1 -->
           <div class="col-12 col-md order-1">
             <div class="project-text pb-1 w-100 text-left textDIV">
             <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
+              <hr class="d-none d-lg-block mb-5 ml-0" />
                 <h5>When early vocabulary is acquired late: Effects of iconicity and gestures on vocabulary development in signing children </h5>
                 <p class="mb-4">
                   <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/60-promising-research-projects-launched-open-competition-ssh-xs-funding" target="_blank">NWO OC-SSH-XS grant</a><br>
@@ -85,6 +121,7 @@
         <div class="col-12 col-md order-2">
           <div class="project-text pb-1 w-100 text-left textDIV">
           <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
+            <hr class="d-none d-lg-block mb-5 ml-0" />
               <h5>A canvas in space: Partitioning of the signing space for referential purposes in Sign Language of the Netherlands (NGT)</h5>
               <p class="mb-4">
                 <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/another-78-researchers-receive-nwo-veni-grant" target="_blank">NWO VENI grant</a><br>
