--- a/people.html
+++ b/people.html
@@ -99,10 +99,7 @@
                       <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
                       <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Postdoc Linguistics)<br>
-                      <a href="https://www.illc.uva.nl/People/person/5429/Dr-K-E-Mudd" target="_blank">Katie Mudd</a> (Postdoc Linguistics)<br>
-                      <a href="https://enalisnick.github.io" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning)<br>
                       <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT)<br>
-                      <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">James Trujillo</a> (Assistant Professor Language Sciences for Social Good)<br>
                       <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
@@ -132,29 +129,18 @@
                       <br>
                     </p>
 
-                    <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
 
-
-                    <!-- <h5>
-                      Collaborators
-                    </h5>
-                    <p class="text-black-50 mb-3">
-                      Onno Crasborn, University of Nijmegen<br>
-                      <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>,
-                        University of Geneva<br>
-                      <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a>, University of East Anglia<br>
-                      <a href="https://zorgbeter.info/" target="_blank"> Anika Smeijers</a>, Amsterdam University Medical Centre<br>
-                      Roos Wattel, <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
-                    </p> -->
                 </div>
             </div>
+
             <!-- Column for GIF -->
             <div class="col-12 col-md project-text order-md-12 text-left ml-md textDIV">
-             <!-- <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'"> -->
-           <!-- </div> -->
-
-           <!-- <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV"> -->
-
+            <h5>
+              Affiliate members
+            </h5>
+            <p class="text-black-50 mb-3">
+              <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
+            </p>
              <h5>
                PhD alumni
              </h5>
@@ -175,7 +161,7 @@
               Jos Ritmeester (MA Linguistics),
               Anna-Lina Mörking (BA Linguistics),
               Vivianne Joosten (MA Linguistics),
-              Sybil Vachaudez (MA Linguistics)<br>
+              Sybil Vachaudez (MA Linguistics).<br>
             </p>
             <p class="text-black-50 mb-1">
                <b>2022</b>: Britt van Gemert (MSc AI),
@@ -183,18 +169,36 @@
                Merel Atia (BSc AI),
                Roel de jeu (BSc CS),
                Daniël Vink (MSc CS),
-               Lyke Esselink (MSc AI)<br>
+               Lyke Esselink (MSc AI),
+               Gina Habets (BA Linguistics),
+               Harry Hughes (MA Linguistics),
+               Anne ten Klooster (BA Linguistics),
+               Edoardo Leo (MA Linguistics),
+               Lotte Rusch (MA Linguistics),
+               Nicole Tsiane (BA Linguistics).<br>
              </p>
              <p class="text-black-50 mb-1">
                <b>2021</b>: Mark van Hofwegen (BSc AI),
                Matthijs van de Vijver (BSc AI),
-               Alon Shilo (BSc AI).<br>
+               Alon Shilo (BSc AI)
+               Merel van Engelen (BA Linguistics),
+               Miguel Hacham (BA Linguistics),
+               Kristel de Laat (BA Linguistics),
+               Bjorn Lichtenberg (MA Linguistics).<br>
              </p>
              <p class="text-black-50 mb-3">
                <b>2020</b>: Lyke Esselink (BSc AI),
                Shani Mende-Gillings (BSc AI),
                Judith Corsel (BSc AI),
-               Jasmijn Bleijlevens (BA University College).<br>
+               Jasmijn Bleijlevens (BA University College),
+               Belinda van der Aa (BA Linguistics),
+               Stephanie van den Broek (BA Linguistics),
+               Lisa Jungen (MA Linguistics),
+               Jenia Khristoforova (RMA Linguistics),
+               Lotte Rusch (BA Linguistics),
+               Laura Spijker (MA Linguistics),
+               Door Spruijt (RMA Linguistics),
+               Marissa Verbokkem (BA Linguistics).<br>
                <!-- Bram Smit (2019)<br>
                Sander Brinkhuijsen (2019)<br>
                Steven de Weille (2019)<br>
